--- a/src/components/bookmarks.css
+++ b/src/components/bookmarks.css
@@ -1,8 +1,8 @@
-.btn:focus {
+.btn__bokmarks:focus {
     box-shadow: none;
 }
 
-.btn:hover {
+.btn__bokmarks:hover {
     outline: 0;
     box-shadow: 1px 1px 1px 2px red;
 }
